<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hot News App</string>
    <string name="action_settings">Settings</string>
    <string name="news_image">News Image</string>
    <string name="news_listsize">Max news row in homepage</string>
    <string name="news_updatetime">Time auto update (Minutes)</string>
    <string name="news_keyword">Keyword follow</string>
    <string name="news_newkeyword">Enter new keyword</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="err_ex_key">Exist keyword in data</string>
    <string name="err_null_key">Not null</string>

</resources>